fixing design of popup set trans pass , the field will change color when mismatch password or when the password is not valid , centered the walletv2Error message on iphone 7 and se

--- a/src/app/wallet/wallet.component.css
+++ b/src/app/wallet/wallet.component.css
@@ -2203,7 +2203,10 @@ p {
 }
 
 .div-input-icon.error {
-  border: 1px solid #f52079;
+  border: 1px solid #f52079 !important;
+}
+.div-input-icon.errorMsg {
+  border: 1px solid #f52079 !important;
 }
 
 @media (max-width: 424px) {
